# Gathering-Street-View-Images-in-a-Specific-Area

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  mkdocs.yml  mypy.ini  pyproject.toml
src/jeddah/: .envrc  __init__.py  conversion_functions.py  create_path.py  database_config.py  display_map.py  main.py  point.py  request_daedal.py  request_images.py
src/settings/: settings.py
tests/: test_converstion_functions.py  test_create_path.py  test_database_config.py  test_display_map.py  test_jeddah.py  test_point.py  test_request_daedal.py  test_request_images.py  testing_shit.py
