[tool.poetry]
name = "Jeddah"
version = "0.1.0"
description = ""
authors = ["marc <marc.devaugiraud@upciti.com>"]

[tool.poetry.scripts]
jeddah = "jeddah.main:main"

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.9.3"
SQLAlchemy-Utils = "^0.38.2"
pyproj = "^3.3.1"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.37"}
requests = "^2.28.0"
typer = "^0.4.1"
python-settings = "^0.2.2"
pydantic = "^1.9.1"
opencv-python = "^4.6.0"
osmnx = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
bandit = "^1.7.4"
mypy = "0.950"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
types-requests = "^2.27.30"




[tool.black]
skip-string-normalization = true
line_length = 90

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
combine_as_imports = true
lines_after_imports = 2
force_sort_within_sections = true
sections = '''
    FUTURE
    STDLIB
    THIRDPARTY
    FIRSTPARTY
    TESTS
    LOCALFOLDER
'''
known_tests = "tests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
